# MyProjects

./: README.md
Assembly/: הגרלת מספרים וניחושם.asm  פרויקט באסמבלי.docx
C++/(1) Reversi Playing by the console/: GameRunner.cpp
Java/Math-Expressions Project/: README.txt  makefile
Java/Space-Invaders/: makefile
Python - Machine Learning/: boolean_conj_predictor.py  ex2.py
Python - Machine Learning/Neural networks - Identifying garment type from 10 classes/: Neural networks - Identifying garment type.py  explanation about the training set & test set.txt
Python - Machine Learning/cnn flowers classification/: cnn_flowers_classification.ipynb
Robotics (Python & CPP)/adversarial-monitor/multi-robot-gazebo/ros_pam/: CMakeLists.txt  package.xml
Robotics (Python & CPP)/adversarial-monitor/multi-robot-gazebo/ros_pam/cfg/: Tracker.cfg
Robotics (Python & CPP)/adversarial-monitor/multi-robot-gazebo/ros_pam/launch/: adversarial_monitor.launch  gazebo_multiple_robots.launch  gazebo_one_robot.launch  gazebo_pose_ground_truth_updater.launch
Robotics (Python & CPP)/adversarial-monitor/multi-robot-gazebo/ros_pam/src/ros_pam/: definitions.py  grid_generator.py  grid_server.py  monitor.py  pathWriter.py  threats_map_printer.py  true_pose_from_gazebo.py
Robotics (Python & CPP)/adversarial-monitor/multi-robot-gazebo/ros_pam/srv/: ReloadGrid.srv  UpdateGridCell.srv
Robotics (Python & CPP)/adversarial-monitor/multi-robot-gazebo/ros_pam/yaml_files/: adversarial_gazebo.yaml  gazebo_states.yaml  my_stage_stopper.launch  willow-threat.pgm  willow-threat.yaml
(+357 files in other folders)
